# lambdabot-telegram-plugins

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  lambdabot-telegram-plugins.cabal
State/: Pristine.hs
app/: Main.hs  Modules.hs
scripts/: start.sh  stop.sh  watch.sh
src/Lambdabot/Config/: Telegram.hs
src/Lambdabot/Plugin/: Telegram.hs
src/Lambdabot/Plugin/Telegram/: Bot.hs  Callback.hs  Message.hs  Shared.hs
src/Lambdabot/Plugin/Telegram/Bot/: Generic.hs
