cabal-version:      2.4
name:               lambdabot-telegram-plugins
version:            0.1.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
license:            GPL-2.0-or-later
author:             Andrey Prokopenko
maintainer:         persiantiger@yandex.ru

-- A copyright notice.
-- copyright:
category:           Development, Web
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Lambdabot.Config.Telegram
                    , Lambdabot.Plugin.Telegram
                    , Lambdabot.Plugin.Telegram.Bot
                    , Lambdabot.Plugin.Telegram.Bot.Generic
                    , Lambdabot.Plugin.Telegram.Callback
                    , Lambdabot.Plugin.Telegram.Message
                    , Lambdabot.Plugin.Telegram.Shared       
    hs-source-dirs:   src
    ghc-options:      -Wall
    default-language: Haskell2010
    build-depends:    base < 4.17
                    , containers
                    , dependent-map
                    , dependent-sum
                    , directory
                    , edit-distance
                    , haskell-src-exts-simple
                    , telegram-bot-simple >= 0.5.2
                    , text
                    , lambdabot-core
                    , lifted-base
                    , monad-control
                    , mtl
                    , pretty-simple
                    , process
                    , regex-tdfa
                    , split
                    , stm
                    , transformers
                    , utf8-string

executable telegram-lambdabot
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:    Modules
                    , Paths_lambdabot_telegram_plugins

    build-depends:    base < 4.17
                    , lambdabot-core
                    , lambdabot-haskell-plugins
                    , lambdabot-telegram-plugins
                    , mtl

    
    hs-source-dirs:   app
    ghc-options:      -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
